Fixado cálculo fonte size de acordo com o tamanho minimo grid item. Adicionado a possibilidade de renderizar o font-icon a direita ou esquerda do input.

--- a/index.html
+++ b/index.html
@@ -15,36 +15,52 @@
   <body>
     <div class="container">
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-right"></i>
+        <input type="text" class="fnt-style input-to-left" placeholder="Nome" />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-left"></i>
+        <input
+          type="text"
+          class="fnt-style input-to-right"
+          placeholder="Nome"
+        />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-right"></i>
+        <input type="text" class="fnt-style input-to-left" placeholder="Nome" />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-left"></i>
+        <input
+          type="text"
+          class="fnt-style input-to-right"
+          placeholder="Nome"
+        />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-right"></i>
+        <input type="text" class="fnt-style input-to-left" placeholder="Nome" />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-left"></i>
+        <input
+          type="text"
+          class="fnt-style input-to-right"
+          placeholder="Nome"
+        />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-right"></i>
+        <input type="text" class="fnt-style input-to-left" placeholder="Nome" />
       </div>
       <div class="container-input-text-icon">
-        <i class="fas fa-user"></i>
-        <input type="text" class="fnt-style" placeholder="Nome" />
+        <i class="fas fa-user icon-to-left"></i>
+        <input
+          type="text"
+          class="fnt-style input-to-right"
+          placeholder="Nome"
+        />
       </div>
     </div>
   </body>
